2011-06-18  kitone  <kitone@gna.org>

	* configure.in:
	Switching back to development version.

2011-06-18  kitone  <kitone@gna.org>

	* NEWS:
	* configure.in:
	Preparing 0.39.0 release.

2011-06-18  kitone  <kitone@gna.org>

	* configure.in:
	* plugins/subtitleformats/Makefile.am:
	* plugins/subtitleformats/sami/Makefile.am:
	* plugins/subtitleformats/sami/sami.cc:
	* plugins/subtitleformats/sami/sami.se-plugin.in:
	Introduce new subtitle format SAMI. Patch by Dongsu Park <advance38 at gmail dot com>

2011-04-10  kitone  <kitone@gna.org>

	* configure.in:
	* plugins/actions/Makefile.am:
	* plugins/actions/documentsnavigation/Makefile.am:
	* plugins/actions/documentsnavigation/documentsnavigation.cc:
	* plugins/actions/documentsnavigation/documentsnavigation.se-plugin.in:
	* src/document.cc:
	* src/documentsystem.cc:
	* src/documentsystem.h:
	Fix bug #18010 : Feature request: keyboard shortcut for switching between
	opened files. New plugin documentsnavigation.

2011-04-02  kitone  <kitone@gna.org>

	* plugins/subtitleformats/advancedsubstationalpha/Makefile.am:
	* plugins/subtitleformats/advancedsubstationalpha/advancedsubstationalpha.cc:
	* plugins/subtitleformats/advancedsubstationalpha/dialog-advancedsubstationalpha-preferences.ui:
	* plugins/subtitleformats/substationalpha/Makefile.am:
	* plugins/subtitleformats/substationalpha/dialog-substationalpha-preferences.ui:
	* plugins/subtitleformats/substationalpha/substationalpha.cc:
	Fix bug #17821 : Using capital N for linebreaks in ASS format.

2011-03-05  kitone  <kitone@gna.org>

	* src/gui/treeviewextensionmanager.cc:
	Display an icon when an extension is configurable.

2011-03-05  kitone  <kitone@gna.org>

	* configure.in:
	* plugins/actions/Makefile.am:
	New plugin insertsubtitlefromkeyframe.
	
	* plugins/actions/insertsubtitlefromkeyframe/Makefile.am:
	* plugins/actions/insertsubtitlefromkeyframe/insertsubtitlefromkeyframe.cc: