@@ -1,3 +1,8 @@
+2011-07-02  kitone  <kitone@gna.org>
+
+	* plugins/subtitleformats/sami/sami.cc:
+	Fix: No need ptr for Subtitle.
+
 2011-06-18  kitone  <kitone@gna.org>
 
 	* configure.in:
